# das-streamlit-app

./: .gitignore  LICENSE  README.md  hf_download.py  pyproject.toml
src/: app.py
